--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.AppCompat"
         tools:targetApi="31">
         <activity
-            android:name=".ui.shopplan.ShopPlanActivity"
+            android:name=".view.shopplan.ShopPlanActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat">
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.shopplanform.ShopPlanFormActivity"
+            android:name=".view.shopplanform.ShopPlanFormActivity"
             android:label="@string/shop_plan_form"
             android:theme="@style/Theme.AppCompat">
         </activity>
